# AIO02_TF3_Phase3

./: .gitignore  AI_BASELINE_EVAL.md  BACKLOG-aiops.md  GIT-STATUS-CHECKLIST.md  MANDATE-06-ai-trust-safety.md  PLAN.md  README.md  SPEC-week2.md  diff_evaluator.txt  docs-aio-engine.md  docs-chaos-engine.md
TF3/ai-engine/: AI_BASELINE_EVAL.md  BACKLOG-aiops.md  ecr-policy.json  pyproject.toml
TF3/ai-engine/.git_backup/: COMMIT_EDITMSG  HEAD  config  index
TF3/ai-engine/.git_backup/logs/: HEAD
TF3/ai-engine/contracts/: C5-ai-cost-report.md  telemetry-dependencies.md
TF3/ai-engine/cost/: model-pricing.yaml
TF3/ai-engine/cost/reports/: README.md
TF3/ai-engine/deploy/: values-aio-llm.override.yaml
TF3/ai-engine/docs/: REVIEW-RESPONSE-AIO02.md
TF3/ai-engine/grafana/: ai-engine-health-dashboard.json  slo-checkout-dashboard.json
TF3/ai-engine/prometheus/: CDO-HANDOFF-RECORDING-RULES.md  HANDOFF-CDO-recording-rules.md  PROMPT-WRITE-RECORDING-RULES.md  burnrate_alerts.yaml  check-metrics-data.sh  prometheusrule-techx-slo.yaml  recording_rules.yaml  telemetry-dependencies.md
TF3/ai-engine/runbooks/: RB-LLM-BADSUMMARY.md
TF3/ai-engine/scripts/: synthetic_probe.py
TF3/ai-engine/src/ai_engine/: server.py
TF3/ai-engine/src/ai_engine/agent/: tools.py
TF3/ai-engine/src/ai_engine/aie/: guardrail.py
TF3/ai-engine/src/ai_engine/aiops/: approval.py  audit_log.py  correlator.py  cost_roi.py  detector_burnrate.py  detector_iforest.py  detector_logtemplate.py  kb_retriever.py  (+1 more)
TF3/ai-engine/tests/: test_agent.py  test_aie_phase1.py  test_slack_client.py
(+713 files in other folders)
